Google Nextgen 1.0.1 update and build cleanup (#179)
* Bump com.google.android.libraries.ads.mobile.sdk:ads-mobile-sdk (#178)
---
Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

* Removed no longer required dependency constraints with Nimbus 2.36.1 update

* Removed no longer required dependency constraints with Nextgen 1.0 update

* Removed warning when testing using JDK 25+

---------

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>